--- a/public/assets/scss/component/_list.scss
+++ b/public/assets/scss/component/_list.scss
@@ -7,11 +7,11 @@
   }
 
   &__more-btn {
-    @include wh(96px, 34px);
+    @include wh(6rem, 2.125rem);
     @include bg-url("img", "more-btn.svg");
 
     transition: 0.4s;
-    margin-bottom: 31px;
+    margin-bottom: 1.9375rem;
     align-self: flex-end;
 
     &:hover {
@@ -20,11 +20,11 @@
   }
 
   &__more-btn--community {
-    @include wh(249px, 34px);
+    @include wh(15.5625rem, 2.125rem);
     @include bg-url("img", "more-btn-comu.svg");
 
     transition: 0.4s;
-    margin-bottom: 31px;
+    margin-bottom: 1.9375rem;
     align-self: flex-end;
 
     &:hover {
@@ -38,15 +38,15 @@
     }
 
     @include font-op {
-      font-size: 30px;
+      font-size: 1.875rem;
       font-weight: 300;
-      line-height: 45px;
+      line-height: 2.8125rem;
     }
 
     .num {
       display: inline-block;
-      margin-right: 8px;
-      font-size: 50px;
+      margin-right: 0.5rem;
+      font-size: 3.125rem;
       font-weight: 600;
     }
   }
@@ -59,15 +59,15 @@
   &__item {
     cursor: pointer;
     box-sizing: border-box;
-    height: 467px;
+    height: 29.1875rem;
 
     &:hover {
-      // border: 3px solid #ee3b4a;
+      // border: 0.1875rem solid #ee3b4a;
       box-sizing: border-box;
     }
 
     &--thumb {
-      @include wh(100%, 181px);
+      @include wh(100%, 11.3125rem);
 
       position: relative;
 
@@ -83,30 +83,30 @@
           justify-content: center;
         }
 
-        @include wh(66px, 24px);
+        @include wh(4.125rem, 1.5rem);
 
         @include font-op {
           text-align: center;
-          font-size: 13px;
+          font-size: 0.8125rem;
           color: #fff;
         }
 
         position: absolute;
-        left: 28px;
-        bottom: 15px;
-        border: 1px solid #fff;
-        border-radius: 15px;
+        left: 1.75rem;
+        bottom: 0.9375rem;
+        border: 0.0625rem solid #fff;
+        border-radius: 0.9375rem;
       }
     }
   }
 
   &__info {
     position: relative;
-    padding: 20px 28px;
+    padding: 1.25rem 1.75rem;
     background: #fff;
 
     &--star {
-      margin-bottom: 18px;
+      margin-bottom: 1.125rem;
 
       .fa-star {
         color: rgba(225, 187, 0, 0.2);
@@ -123,18 +123,18 @@
       }
 
       @include font-op {
-        font-size: 14px;
+        font-size: 0.875rem;
         font-weight: 400;
         color: #a7a7a7;
       }
 
       position: absolute;
-      top: 20px;
-      right: 28px;
+      top: 1.25rem;
+      right: 1.75rem;
 
       img {
         display: inline-block;
-        margin-right: 5px;
+        margin-right: 0.3125rem;
       }
     }
 
@@ -143,22 +143,22 @@
         @include ellipse(1, 1.1);
 
         @include font-op {
-          font-size: 20px;
+          font-size: 1.25rem;
           font-weight: 600;
-          line-height: 55px;
+          line-height: 3.4375rem;
         }
       }
 
       &-txt {
-        @include ellipse(5, 23px);
+        @include ellipse(5, 1.4375rem);
 
         @include font-op {
-          font-size: 16px;
-          line-height: 23px;
+          font-size: 1rem;
+          line-height: 1.4375rem;
           color: #464646;
         }
 
-        margin-bottom: 16px;
+        margin-bottom: 1rem;
       }
 
       &-heart {
@@ -167,7 +167,7 @@
 
         .num {
           @include font-op {
-            font-size: 14px;
+            font-size: 0.875rem;
             font-weight: 500;
             color: #ee3b4a;
           }
@@ -177,62 +177,62 @@
   }
 
   .swiper-button-next {
-    right: -77px;
-    width: 55px;
-    height: 55px;
+    right: -4.8125rem;
+    width: 3.4375rem;
+    height: 3.4375rem;
     @include bg-url("img", "com-next.png", "center", "cover");
   }
 
   .swiper-button-prev {
-    left: -77px;
-    width: 55px;
-    height: 55px;
+    left: -4.8125rem;
+    width: 3.4375rem;
+    height: 3.4375rem;
     @include bg-url("img", "com-prev.png", "center", "cover");
   }
 }
 
 /* =================== com-card =================== */
 .com-card {
-  margin-bottom: 65px;
+  margin-bottom: 4.0625rem;
 
   &__list {
     display: flex;
-    margin: 0 -10px;
+    margin: 0 -0.625rem;
   }
 
   &__item {
     position: relative;
     z-index: 1;
     width: 25%;
-    height: 425px;
-    margin: 0 10px;
-    padding: 47px 23px;
-    padding-bottom: 20px;
+    height: 26.5625rem;
+    margin: 0 0.625rem;
+    padding: 2.9375rem 1.4375rem;
+    padding-bottom: 1.25rem;
     background: #fff;
     text-align: center;
 
     &--tit {
       @include font-op {
-        font-size: 26px;
+        font-size: 1.625rem;
         font-weight: 600;
-        line-height: 32px;
+        line-height: 2rem;
       }
 
-      margin-bottom: 14px;
+      margin-bottom: 0.875rem;
     }
 
     &--app {
       @include font-op {
-        font-size: 18px;
+        font-size: 1.125rem;
         font-weight: 400;
         color: #ee3b4a;
         line-height: 1;
       }
 
       display: inline-block;
-      padding-bottom: 8px;
-      border-bottom: 1px solid #ee3b4a;
-      margin-bottom: 37px;
+      padding-bottom: 0.5rem;
+      border-bottom: 0.0625rem solid #ee3b4a;
+      margin-bottom: 2.3125rem;
     }
 
     &--price {
@@ -240,55 +240,55 @@
         align-items: center;
       }
 
-      @include wh(230px, 56px);
+      @include wh(14.375rem, 3.5rem);
 
       @include font-op {
-        font-size: 16px;
+        font-size: 1rem;
         font-weight: 300;
         color: #ffffff;
       }
 
-      margin-bottom: 37px;
+      margin-bottom: 2.3125rem;
       background-image: linear-gradient(180deg, #ee3b4a, #ff937a 130%);
-      border-radius: 40px;
+      border-radius: 2.5rem;
       display: inline-block;
 
       .bold {
         @include font-op {
-          font-size: 26px;
+          font-size: 1.625rem;
           font-weight: 600;
-          line-height: 56px;
+          line-height: 3.5rem;
           color: #ffffff;
           vertical-align: sub;
         }
 
-        margin-left: 7px;
+        margin-left: 0.4375rem;
       }
     }
 
     &--txt {
       @include font-op {
-        font-size: 16px;
+        font-size: 1rem;
         font-weight: 400;
-        line-height: 22px;
+        line-height: 1.375rem;
         color: #242424;
       }
 
-      margin-bottom: 16px;
+      margin-bottom: 1rem;
     }
 
     &--txt02 {
       @include font-op {
-        font-size: 16px;
+        font-size: 1rem;
         font-weight: 300;
-        line-height: 28px;
+        line-height: 1.75rem;
         color: #464646;
       }
     }
 
     .input-box {
       @include pos-abs-center-horizontal;
-      bottom: 20px;
+      bottom: 1.25rem;
     }
   }
 }
