--- a/public/assets/scss/layout/_header.scss
+++ b/public/assets/scss/layout/_header.scss
@@ -1,9 +1,9 @@
 /* =================== header =================== */
 .header {
   &__inner {
-    @include wh(100%, 100px);
+    @include wh(100%, 6.25rem);
 
-    max-width: 1725px;
+    max-width: 107.8125rem;
     position: relative;
     background: #fff;
   }
@@ -19,10 +19,10 @@
   @include pos-abs-center-vertical;
   @include flex;
 
-  right: 350px;
+  right: 21.875rem;
 
   &__list {
-    margin-right: 43px;
+    margin-right: 2.6875rem;
 
     &:last-of-type {
       margin-right: 0;
@@ -31,28 +31,28 @@
 
   &__item {
     @include font-op {
-      font-size: 16px;
+      font-size: 1rem;
       font-weight: 600;
     }
     @include make-after {
-      @include wh(8px, 8px);
+      @include wh(0.5rem, 0.5rem);
 
       opacity: 0;
       position: absolute;
-      top: -6px;
-      right: 4px;
+      top: -0.375rem;
+      right: 0.25rem;
       background: rgba(239, 84, 85, 0.4);
       border-radius: 50%;
       display: inline-block;
       transition: all 0.6s;
     }
     @include make-before {
-      @include wh(8px, 8px);
+      @include wh(0.5rem, 0.5rem);
 
       opacity: 0;
       position: absolute;
-      right: -1px;
-      top: -6px;
+      right: -0.0625rem;
+      top: -0.375rem;
       background: #ef5455;
       border-radius: 50%;
       display: inline-block;
@@ -82,7 +82,7 @@
   right: 0;
 
   &__list {
-    margin-right: 22px;
+    margin-right: 1.375rem;
 
     &:last-of-type {
       margin-right: 0;
@@ -95,15 +95,15 @@
 
   &__item {
     @include font-op {
-      font-size: 16px;
+      font-size: 1rem;
       font-weight: 600;
       color: #a7a7a7;
 
       @include make-after {
         @include pos-abs-center-vertical;
-        right: -11px;
-        width: 1px;
-        height: 14px;
+        right: -0.6875rem;
+        width: 0.0625rem;
+        height: 0.875rem;
         background: #a7a7a7;
       }
     }
@@ -119,27 +119,27 @@
 
 /* =================== footer =================== */
 .footer {
-  padding-top: 45px;
-  padding-bottom: 24px;
+  padding-top: 2.8125rem;
+  padding-bottom: 1.5rem;
   background: #060417;
   &__inner {
     &--top {
       &-link {
         @include font-op {
-          font-size: 14px;
+          font-size: 0.875rem;
           color: #a7a7a7;
         }
         @include make-after {
-          @include wh(1px, 11px);
+          @include wh(0.0625rem, 0.6875rem);
           @include pos-abs-center-vertical;
-          right: -13px;
+          right: -0.8125rem;
 
           background: #a7a7a7;
         }
 
         position: relative;
         display: inline-block;
-        margin-right: 21px;
+        margin-right: 1.3125rem;
 
         &:last-of-type::after {
           display: none;
@@ -147,56 +147,56 @@
       }
     }
     &--mid {
-      margin-top: 32px;
+      margin-top: 2rem;
 
       &-company {
         @include font-op {
-          font-size: 14px;
+          font-size: 0.875rem;
           font-weight: 600;
           color: #ffffff;
           line-height: 1;
         }
 
-        margin-bottom: 10px;
+        margin-bottom: 0.625rem;
       }
       &-represent {
         @include font-op {
-          font-size: 14px;
+          font-size: 0.875rem;
           font-weight: 600;
           color: #a7a7a7;
           line-height: 1;
         }
         .line {
           @include font-op {
-            font-size: 14px;
+            font-size: 0.875rem;
             display: inline-block;
-            margin: 0 4px;
+            margin: 0 0.25rem;
             color: #a7a7a7;
           }
         }
       }
       &-txt {
-        margin-top: 10px;
+        margin-top: 0.625rem;
         p {
           @include font-op {
-            font-size: 14px;
+            font-size: 0.875rem;
             color: #a7a7a7;
-            margin-top: 5px;
+            margin-top: 0.3125rem;
           }
         }
         p.last {
-          margin-top: 15px;
+          margin-top: 0.9375rem;
         }
       }
     }
     &--copy {
       @include font-op {
-        font-size: 14px;
+        font-size: 0.875rem;
         line-height: 1;
         color: #676767;
       }
 
-      margin-top: 27px;
+      margin-top: 1.6875rem;
     }
   }
 }
